[gd_scene load_steps=12 format=3 uid="uid://cnatboplfjvps"]

[ext_resource type="Script" path="res://scenes/test_preparation/test_preparation.gd" id="1_trmle"]
[ext_resource type="PackedScene" uid="uid://dcn4tuxqo0gbr" path="res://scenes/test_preparation/choice_panel.tscn" id="2_d7i80"]
[ext_resource type="Animation" uid="uid://btjqe6je1e1si" path="res://resources/pulse_animation.res" id="2_w42ns"]

[sub_resource type="Theme" id="Theme_kip0t"]
TooltipLabel/font_sizes/font_size = 10

[sub_resource type="Animation" id="Animation_oin8y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aw3k4"]
_data = {
"Pulse": ExtResource("2_w42ns"),
"RESET": SubResource("Animation_oin8y")
}

[sub_resource type="Theme" id="Theme_m5n2d"]
TooltipLabel/font_sizes/font_size = 10

[sub_resource type="AnimationLibrary" id="AnimationLibrary_toxy5"]
_data = {
"Pulse": ExtResource("2_w42ns")
}

[sub_resource type="Animation" id="Animation_3si2r"]
resource_name = "Fade out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overview:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overview:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_oed7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overview:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overview:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pukbg"]
_data = {
"Fade out": SubResource("Animation_3si2r"),
"RESET": SubResource("Animation_oed7v")
}

[node name="TestPreparation" type="CanvasLayer"]
script = ExtResource("1_trmle")

[node name="Label" type="Label" parent="."]
offset_left = 176.0
offset_right = 457.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30
text = "CHOOSE YOUR DESTINY"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
offset_left = 54.0
offset_top = 290.0
offset_right = 597.0
offset_bottom = 346.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TirednessContainer" type="HBoxContainer" parent="HBoxContainer3/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="TirednessLabel" type="Label" parent="HBoxContainer3/VBoxContainer2/TirednessContainer"]
layout_mode = 2
text = "Tiredness"

[node name="TirednessBar" type="ProgressBar" parent="HBoxContainer3/VBoxContainer2/TirednessContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Writing speed defines how many letters you write per click "
theme = SubResource("Theme_kip0t")
show_percentage = false

[node name="WritingSpeedValue" type="Label" parent="HBoxContainer3/VBoxContainer2/TirednessContainer/TirednessBar"]
layout_mode = 0
offset_left = 162.0
offset_top = 1.0
offset_right = 300.0
offset_bottom = 27.0
text = "Writing Speed: 10"

[node name="TirednessBarPreview" type="ProgressBar" parent="HBoxContainer3/VBoxContainer2/TirednessContainer/TirednessBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 464.0
offset_bottom = 27.0
mouse_filter = 2
show_percentage = false

[node name="TirednessPreviewAnimation" type="AnimationPlayer" parent="HBoxContainer3/VBoxContainer2/TirednessContainer/TirednessBar/TirednessBarPreview"]
libraries = {
"": SubResource("AnimationLibrary_aw3k4")
}

[node name="KnowledgeContainer" type="HBoxContainer" parent="HBoxContainer3/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="KnowledgeLabel" type="Label" parent="HBoxContainer3/VBoxContainer2/KnowledgeContainer"]
layout_mode = 2
text = "Knowledge"

[node name="KnowledgeBar" type="ProgressBar" parent="HBoxContainer3/VBoxContainer2/KnowledgeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Answer precision defines how likely you are to be correct on each paragraph write"
theme = SubResource("Theme_m5n2d")
show_percentage = false

[node name="AnswerPrecisionValue" type="Label" parent="HBoxContainer3/VBoxContainer2/KnowledgeContainer/KnowledgeBar"]
layout_mode = 0
offset_left = 131.0
offset_top = 1.0
offset_right = 305.0
offset_bottom = 27.0
text = "Answer Precision: 20%"

[node name="KnowledgeBarPreview" type="ProgressBar" parent="HBoxContainer3/VBoxContainer2/KnowledgeContainer/KnowledgeBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 453.0
offset_bottom = 27.0
mouse_filter = 2
show_percentage = false

[node name="KnowledgeAnimationPreview" type="AnimationPlayer" parent="HBoxContainer3/VBoxContainer2/KnowledgeContainer/KnowledgeBar/KnowledgeBarPreview"]
libraries = {
"": SubResource("AnimationLibrary_toxy5")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 56.0
offset_top = 61.0
offset_right = 594.0
offset_bottom = 278.0

[node name="TestNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Semester I - Computability and Complexity Theory - Test I"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChoiceContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="ChoicePanel" parent="VBoxContainer/ChoiceContainer" instance=ExtResource("2_d7i80")]
visible = false
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/ChoiceContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ChoiceContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ChoiceContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Week 2"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/ChoiceContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ChoiceContainer/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ChoiceContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
text = "Week 3"
horizontal_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/ChoiceContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ChoiceContainer/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ChoiceContainer/PanelContainer4/VBoxContainer"]
layout_mode = 2
text = "Week 4
"
horizontal_alignment = 1

[node name="TestContainer" type="PanelContainer" parent="VBoxContainer/ChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ChoiceContainer/TestContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ChoiceContainer/TestContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="TestDayLabel" type="Label" parent="VBoxContainer/ChoiceContainer/TestContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test Day
"
horizontal_alignment = 1

[node name="TestStartButton" type="Button" parent="VBoxContainer/ChoiceContainer/TestContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LET'S
DO IT!"

[node name="Overview" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DisciplineName" type="Label" parent="Overview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -111.0
offset_right = 146.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
text = "Computability and Complexity Theory"
horizontal_alignment = 1

[node name="FormulaContainer" type="VBoxContainer" parent="Overview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -73.0
offset_right = 15.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="FormulaDenominator" type="HBoxContainer" parent="Overview/FormulaContainer"]
layout_mode = 2

[node name="FirstTestValue" type="Label" parent="Overview/FormulaContainer/FormulaDenominator"]
layout_mode = 2
text = "T1"

[node name="Plus" type="Label" parent="Overview/FormulaContainer/FormulaDenominator"]
layout_mode = 2
text = "+"

[node name="SecontTestValue" type="Label" parent="Overview/FormulaContainer/FormulaDenominator"]
layout_mode = 2
text = "T2"

[node name="HSeparator" type="HSeparator" parent="Overview/FormulaContainer"]
layout_mode = 2

[node name="FormulaDivisor" type="Label" parent="Overview/FormulaContainer"]
layout_mode = 2
text = "2"
horizontal_alignment = 1

[node name="ScoreWarning" type="Label" parent="Overview"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -1.0
offset_right = 75.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "You need to score 10.0 "

[node name="OverviewAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pukbg")
}

[connection signal="pressed" from="VBoxContainer/ChoiceContainer/TestContainer/MarginContainer/VBoxContainer/TestStartButton" to="." method="_on_button_pressed"]
